--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <script src="//code.jivosite.com/widget.js" jv-id="waQAtyv07Z" async></script>
 
-    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
     <title>Кыргыздипсервис</title>
 </head>
 
@@ -114,7 +114,7 @@
                         <div class="logo-block">
                             <div class="logo">
                                 <a href="#" class="logo__link">
-                                    <img src="/assets/img/logo/logo.png" alt="logo" class="log__pic">
+                                    <img src="assets/img/logo/logo.png" alt="logo" class="log__pic">
                                 </a>
                             </div>
                             <a href="#" class="logo-text">
@@ -343,17 +343,17 @@
                     <main class="main-content">
                         <div class="slaider">
                             <div class="slaider__wrapper">
-                                <img src="/assets/img/foto/sl.jpg" alt="slaider" class="slaider__pic">
+                                <img src="assets/img/foto/sl.jpg" alt="slaider" class="slaider__pic">
                                 <span class="slaider__title">
                                     Туры по кыргызстану
                                 </span>
                             </div>
-                            <div class="slaider__wrapper">
+                            <!-- <div class="slaider__wrapper">
                                 <img src="/assets/img/foto/ik.jpg" alt="slaider" class="slaider__pic">
                                 <span class="slaider__title">
                                     Дипломатический отдых
                                 </span>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="catalog">
                             <div class="title-block">
@@ -366,7 +366,7 @@
                                     <li class="catalog__item">
                                         <div class="catalog__desc">
                                             <a href="service-item.html" class="catalog__link">
-                                                <img src="/assets/img/catalog/avto.jpg" alt="catalog-pic"
+                                                <img src="assets/img/catalog/avto.jpg" alt="catalog-pic"
                                                     class="catalog__pic">
                                                 <span class="catalog__text">Автотранспортные услуги</span>
                                             </a>
@@ -375,7 +375,7 @@
                                     <li class="catalog__item">
                                         <div class="catalog__desc">
                                             <a href="#" class="catalog__link">
-                                                <img src="/assets/img/catalog/home.jpg" alt="catalog-pic"
+                                                <img src="assets/img/catalog/home.jpg" alt="catalog-pic"
                                                     class="catalog__pic">
                                                 <span class="catalog__text">Риэлтовские услуги</span>
                                             </a>
@@ -384,7 +384,7 @@
                                     <li class="catalog__item">
                                         <div class="catalog__desc">
                                             <a href="#" class="catalog__link">
-                                                <img src="/assets/img/catalog/air.jpg" alt="catalog-pic"
+                                                <img src="assets/img/catalog/air.jpg" alt="catalog-pic"
                                                     class="catalog__pic">
                                                 <span class="catalog__text">Авиакасса</span>
                                             </a>
@@ -393,7 +393,7 @@
                                     <li class="catalog__item">
                                         <div class="catalog__desc">
                                             <a href="#" class="catalog__link">
-                                                <img src="/assets/img/catalog/passport.jpg" alt="catalog-pic"
+                                                <img src="assets/img/catalog/passport.jpg" alt="catalog-pic"
                                                     class="catalog__pic">
                                                 <span class="catalog__text">Консульские услуги</span>
                                             </a>
@@ -402,7 +402,7 @@
                                     <li class="catalog__item">
                                         <div class="catalog__desc">
                                             <a href="#" class="catalog__link">
-                                                <img src="/assets/img/catalog/turizm.jpg" alt="catalog-pic"
+                                                <img src="assets/img/catalog/turizm.jpg" alt="catalog-pic"
                                                     class="catalog__pic">
                                                 <span class="catalog__text">Туры по Кыргызстану</span>
                                             </a>
@@ -411,7 +411,7 @@
                                     <li class="catalog__item">
                                         <div class="catalog__desc">
                                             <a href="#" class="catalog__link">
-                                                <img src="/assets/img/catalog/gruzovik_perevozka_mashina.jpg"
+                                                <img src="assets/img/catalog/gruzovik_perevozka_mashina.jpg"
                                                     alt="catalog-pic" class="catalog__pic">
                                                 <span class="catalog__text">Грузоперевозки</span>
                                             </a>
@@ -435,7 +435,7 @@
                                 <li class="new__item">
                                     <a href="news.html" class="new__link">
                                         <div class="new__wrapper-pic">
-                                            <img src="/assets/img/foto/foot.jpg" alt="news-pic" class="new__pic">
+                                            <img src="assets/img/foto/foot.jpg" alt="news-pic" class="new__pic">
                                         </div>
                                         <div class="new-desc__block">
                                             <div class="new-desc__title">
@@ -465,7 +465,7 @@
                                 <li class="new__item">
                                     <a href="#" class="new__link">
                                         <div class="new__wrapper-pic">
-                                            <img src="/assets/img/foto/news-pic.jpg" alt="nopic" class="new__pic">
+                                            <img src="assets/img/foto/news-pic.jpg" alt="nopic" class="new__pic">
                                         </div>
                                         <div class="new-desc__block">
                                             <div class="new-desc__title">
@@ -497,13 +497,13 @@
                         <div class="slaider-bottom">
                             <div class="slaider-bottom__block">
                                 <a href="#" class="slaider-bottom__link">
-                                    <img src="/assets/img/banner/bottom-banner.jpg" alt="banner-bottom"
+                                    <img src="assets/img/banner/bottom-banner.jpg" alt="banner-bottom"
                                         class="slaider-bottom__pic">
                                 </a>
                             </div>
                             <div class="slaider-bottom__block">
                                 <a href="#" class="slaider-bottom__link">
-                                    <img src="/assets/img/banner/8-е.jpg" alt="banner-bottom"
+                                    <img src="assets/img/banner/8-е.jpg" alt="banner-bottom"
                                         class="slaider-bottom__pic">
                                 </a>
                             </div>
@@ -523,7 +523,7 @@
                         <div class="logo-block logo-block--mobile">
                             <div class="logo">
                                 <a href="#" class="logo__link">
-                                    <img src="/assets/img/logo/logo.png" alt="logo" class="log__pic logo--footer">
+                                    <img src="assets/img/logo/logo.png" alt="logo" class="log__pic logo--footer">
                                 </a>
                             </div>
                             <a href="#" class="logo-text">
@@ -540,7 +540,7 @@
                         <div class="logo-block logo-block--mobile">
                             <div class="logo">
                                 <a href="#" class="logo__link">
-                                    <img src="/assets/img/logo/logo_midkr.png" alt="logo" class="log__pic logo--mid">
+                                    <img src="assets/img/logo/logo_midkr.png" alt="logo" class="log__pic logo--mid">
                                 </a>
                             </div>
                             <a href="#" class="logo-text">
