ссылки для гитхаба подправил

--- a/arenda_avto.html
+++ b/arenda_avto.html
@@ -8,7 +8,7 @@
    <META NAME="AUTHOR" CONTENT="Ivan Shirayev">
 
 
-   <link rel="stylesheet" href="/assets/css/main.css">
+   <link rel="stylesheet" href="assets/css/main.css">
    <title>Кыргыздипсервис</title>
 </head>
 
@@ -104,7 +104,7 @@
                   <div class="logo-block">
                      <div class="logo">
                         <a href="#" class="logo__link">
-                           <img src="/assets/img/logo/logo.png" alt="logo" class="log__pic">
+                           <img src="assets/img/logo/logo.png" alt="logo" class="log__pic">
                         </a>
                      </div>
                      <a href="#" class="logo-text">
@@ -353,7 +353,7 @@
                            <div class="catalog__desc">
                               <a href="#" class="catalog__link">
                                  <div class="catalog__wrapp-pic price--position ">
-                                    <img src="/assets/img/foto/h1.jpg" alt="catalog-pic" class="catalog__pic">
+                                    <img src="assets/img/foto/h1.jpg" alt="catalog-pic" class="catalog__pic">
                                     <div class="price">10000 сом</div>
                                  </div>
                                  <span class="catalog__text catalog--color ">Hyndau H-1</span>
@@ -364,7 +364,7 @@
                            <div class="catalog__desc">
                               <a href="#" class="catalog__link">
                                  <div class="catalog__wrapp-pic price--position ">
-                                    <img src="/assets/img/foto/3221b.jpg" alt="catalog-pic" class="catalog__pic">
+                                    <img src="assets/img/foto/3221b.jpg" alt="catalog-pic" class="catalog__pic">
                                     <div class="price">15000 сом</div>
                                  </div>
                                  <span class="catalog__text catalog--color ">Микроавтобус 6-10 мест</span>
@@ -375,7 +375,7 @@
                            <div class="catalog__desc">
                               <a href="#" class="catalog__link">
                                  <div class="catalog__wrapp-pic price--position ">
-                                    <img src="/assets/img/foto/Sprinter-906-Bus-tmb.jpg" alt="catalog-pic"
+                                    <img src="assets/img/foto/Sprinter-906-Bus-tmb.jpg" alt="catalog-pic"
                                        class="catalog__pic">
                                     <div class="price">550 сом</div>
                                  </div>
@@ -387,7 +387,7 @@
                            <div class="catalog__desc">
                               <a href="#" class="catalog__link">
                                  <div class="catalog__wrapp-pic price--position ">
-                                    <img src="/assets/img/foto/1trif.jpg" alt="catalog-pic" class="catalog__pic">
+                                    <img src="assets/img/foto/1trif.jpg" alt="catalog-pic" class="catalog__pic">
                                     <div class="price">500 сом</div>
                                  </div>
                                  <span class="catalog__text catalog--color ">Микроавтобус 20 мест</span>
@@ -411,7 +411,7 @@
                   <div class="logo-block logo-block--mobile">
                      <div class="logo">
                         <a href="#" class="logo__link">
-                           <img src="/assets/img/logo/logo.png" alt="logo" class="log__pic logo--footer">
+                           <img src="assets/img/logo/logo.png" alt="logo" class="log__pic logo--footer">
                         </a>
                      </div>
                      <a href="#" class="logo-text">
@@ -428,7 +428,7 @@
                   <div class="logo-block logo-block--mobile">
                      <div class="logo">
                         <a href="#" class="logo__link">
-                           <img src="/assets/img/logo/logo_midkr.png" alt="logo" class="log__pic logo--mid">
+                           <img src="assets/img/logo/logo_midkr.png" alt="logo" class="log__pic logo--mid">
                         </a>
                      </div>
                      <a href="#" class="logo-text">
