--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <META NAME="AUTHOR" CONTENT="Ivan Shirayev">
 
 
-    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
     <title>Кыргыздипсервис</title>
 </head>
 
@@ -104,7 +104,7 @@
                         <div class="logo-block">
                             <div class="logo">
                                 <a href="#" class="logo__link">
-                                    <img src="/assets/img/logo/logo.png" alt="logo" class="log__pic">
+                                    <img src="assets/img/logo/logo.png" alt="logo" class="log__pic">
                                 </a>
                             </div>
                             <a href="#" class="logo-text">
@@ -322,17 +322,17 @@
                                 </li>
                             </ul>
                         </div>
-                        <h1 class="title title--margin ">
+                        <h2 class="title title--margin ">
                             Расположение
-                        </h1>
+                        </h2>
                         <div class="map">
                             <script type="text/javascript" charset="utf-8" async
                                 src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A7bc32d97f3d343a2e6e4c967ab753246efc95c80bbd41dcb1916aa9ef88710fe&amp;width=100%&amp;height=335&amp;lang=ru_RU&amp;scroll=false">
                             </script>
                         </div>
-                        <h1 class="title title--margin ">
+                        <h2 class="title title--margin ">
                             Обратная связь
-                        </h1>
+                        </h2>
                         <form action="" class="form-feedback">
                             <div class="form-feedback__flexcontainer">
                                 <div class="form-feedback__field">
@@ -376,7 +376,7 @@
                         <div class="logo-block logo-block--mobile">
                             <div class="logo">
                                 <a href="#" class="logo__link">
-                                    <img src="/assets/img/logo/logo.png" alt="logo" class="log__pic logo--footer">
+                                    <img src="assets/img/logo/logo.png" alt="logo" class="log__pic logo--footer">
                                 </a>
                             </div>
                             <a href="#" class="logo-text">
@@ -393,7 +393,7 @@
                         <div class="logo-block logo-block--mobile">
                             <div class="logo">
                                 <a href="#" class="logo__link">
-                                    <img src="/assets/img/logo/logo_midkr.png" alt="logo" class="log__pic logo--mid">
+                                    <img src="assets/img/logo/logo_midkr.png" alt="logo" class="log__pic logo--mid">
                                 </a>
                             </div>
                             <a href="#" class="logo-text">
