--- a/new-item.html
+++ b/new-item.html
@@ -8,7 +8,7 @@
    <META NAME="AUTHOR" CONTENT="Ivan Shirayev">
 
 
-   <link rel="stylesheet" href="/assets/css/main.css">
+   <link rel="stylesheet" href="assets/css/main.css">
    <title>Кыргыздипсервис</title>
 </head>
 
@@ -104,7 +104,7 @@
                   <div class="logo-block">
                      <div class="logo">
                         <a href="#" class="logo__link">
-                           <img src="/assets/img/logo/logo.png" alt="logo" class="log__pic">
+                           <img src="assets/img/logo/logo.png" alt="logo" class="log__pic">
                         </a>
                      </div>
                      <a href="#" class="logo-text">
@@ -351,7 +351,7 @@
                            <li class="new__item">
                               <a href="news.html" class="new__link">
                                  <div class="new__wrapper-pic">
-                                       <img src="/assets/img/foto/foot.jpg" alt="news-pic" class="new__pic">
+                                       <img src="assets/img/foto/foot.jpg" alt="news-pic" class="new__pic">
                                  </div>
                                  <div class="new-desc__block">
                                        <div class="new-desc__title">
@@ -381,7 +381,7 @@
                            <li class="new__item">
                               <a href="#" class="new__link">
                                  <div class="new__wrapper-pic">
-                                       <img src="/assets/img/foto/news-pic.jpg" alt="nopic" class="new__pic">
+                                       <img src="assets/img/foto/news-pic.jpg" alt="nopic" class="new__pic">
                                  </div>
                                  <div class="new-desc__block">
                                        <div class="new-desc__title">
@@ -411,7 +411,7 @@
                            <li class="new__item">
                               <a href="#" class="new__link">
                                  <div class="new__wrapper-pic">
-                                       <img src="/assets/img/foto/news-pic.jpg" alt="nopic" class="new__pic">
+                                       <img src="assets/img/foto/news-pic.jpg" alt="nopic" class="new__pic">
                                  </div>
                                  <div class="new-desc__block">
                                        <div class="new-desc__title">
@@ -441,7 +441,7 @@
                            <li class="new__item">
                               <a href="#" class="new__link">
                                  <div class="new__wrapper-pic">
-                                       <img src="/assets/img/foto/news-pic.jpg" alt="nopic" class="new__pic">
+                                       <img src="assets/img/foto/news-pic.jpg" alt="nopic" class="new__pic">
                                  </div>
                                  <div class="new-desc__block">
                                        <div class="new-desc__title">
@@ -528,7 +528,7 @@
                   <div class="logo-block logo-block--mobile">
                      <div class="logo">
                         <a href="#" class="logo__link">
-                           <img src="/assets/img/logo/logo.png" alt="logo" class="log__pic logo--footer">
+                           <img src="assets/img/logo/logo.png" alt="logo" class="log__pic logo--footer">
                         </a>
                      </div>
                      <a href="#" class="logo-text">
@@ -545,7 +545,7 @@
                   <div class="logo-block logo-block--mobile">
                      <div class="logo">
                         <a href="#" class="logo__link">
-                           <img src="/assets/img/logo/logo_midkr.png" alt="logo" class="log__pic logo--mid">
+                           <img src="assets/img/logo/logo_midkr.png" alt="logo" class="log__pic logo--mid">
                         </a>
                      </div>
                      <a href="#" class="logo-text">
