--- a/news.html
+++ b/news.html
@@ -8,7 +8,7 @@
    <META NAME="AUTHOR" CONTENT="Ivan Shirayev">
 
 
-   <link rel="stylesheet" href="/assets/css/main.css">
+   <link rel="stylesheet" href="assets/css/main.css">
    <title>Кыргыздипсервис</title>
 </head>
 
@@ -104,7 +104,7 @@
                   <div class="logo-block">
                      <div class="logo">
                         <a href="#" class="logo__link">
-                           <img src="/assets/img/logo/logo.png" alt="logo" class="log__pic">
+                           <img src="assets/img/logo/logo.png" alt="logo" class="log__pic">
                         </a>
                      </div>
                      <a href="#" class="logo-text">
@@ -347,7 +347,7 @@
                      05.04.2019 - Благотворительный турнир по мини футболу среди дипломатического корпуса аккредитованных в КР
                   </div>
                   <div class="main-content__text">
-                    <img src="/assets/img/foto/foot.jpg" alt="картинка футбола"> 
+                    <img src="assets/img/foto/foot.jpg" alt="картинка футбола"> 
                      29 сентября 2018 года состоялся благотворительный турнир по мини футболу среди дипломатического
                      корпуса аккредитованных в КР, и приуроченный к празднованию Дня независимости Кыргызской
                      Республики. В турнире приняли участие нижеследующие команды:
@@ -383,7 +383,7 @@
                   <div class="logo-block logo-block--mobile">
                      <div class="logo">
                         <a href="#" class="logo__link">
-                           <img src="/assets/img/logo/logo.png" alt="logo" class="log__pic logo--footer">
+                           <img src="assets/img/logo/logo.png" alt="logo" class="log__pic logo--footer">
                         </a>
                      </div>
                      <a href="#" class="logo-text">
@@ -400,7 +400,7 @@
                   <div class="logo-block logo-block--mobile">
                      <div class="logo">
                         <a href="#" class="logo__link">
-                           <img src="/assets/img/logo/logo_midkr.png" alt="logo" class="log__pic logo--mid">
+                           <img src="assets/img/logo/logo_midkr.png" alt="logo" class="log__pic logo--mid">
                         </a>
                      </div>
                      <a href="#" class="logo-text">
