--- a/arenda_nedvijenosti-inner.html
+++ b/arenda_nedvijenosti-inner.html
@@ -8,7 +8,7 @@
    <META NAME="AUTHOR" CONTENT="Ivan Shirayev">
 
 
-   <link rel="stylesheet" href="/assets/css/main.css">
+   <link rel="stylesheet" href="assets/css/main.css">
    <title>Кыргыздипсервис</title>
 </head>
 
@@ -104,7 +104,7 @@
                   <div class="logo-block">
                      <div class="logo">
                         <a href="#" class="logo__link">
-                           <img src="/assets/img/logo/logo.png" alt="logo" class="log__pic">
+                           <img src="assets/img/logo/logo.png" alt="logo" class="log__pic">
                         </a>
                      </div>
                      <a href="#" class="logo-text">
@@ -353,8 +353,8 @@
                      <div class="catalog-block__slaider">
                         <div class="slaider-big">
                            <div class="slaider-big__wrap">
-                              <img src="/assets/img/foto/guest_house2.JPG"  class="slaider-big__pic" alt="картинка дома">                                       
-                              <img src="/assets/img/foto/guest_house4.jpg"  class="slaider-big__pic" alt="картинка дома">                                       
+                              <img src="assets/img/foto/guest_house2.JPG"  class="slaider-big__pic" alt="картинка дома">                                       
+                              <img src="assets/img/foto/guest_house4.jpg"  class="slaider-big__pic" alt="картинка дома">                                       
                            </div>                             
                                      
                        </div>
@@ -415,7 +415,7 @@
                   <div class="logo-block logo-block--mobile">
                      <div class="logo">
                         <a href="#" class="logo__link">
-                           <img src="/assets/img/logo/logo.png" alt="logo" class="log__pic logo--footer">
+                           <img src="assets/img/logo/logo.png" alt="logo" class="log__pic logo--footer">
                         </a>
                      </div>
                      <a href="#" class="logo-text">
@@ -432,7 +432,7 @@
                   <div class="logo-block logo-block--mobile">
                      <div class="logo">
                         <a href="#" class="logo__link">
-                           <img src="/assets/img/logo/logo_midkr.png" alt="logo" class="log__pic logo--mid">
+                           <img src="assets/img/logo/logo_midkr.png" alt="logo" class="log__pic logo--mid">
                         </a>
                      </div>
                      <a href="#" class="logo-text">
