--- a/arenda_nedvijenosti.html
+++ b/arenda_nedvijenosti.html
@@ -8,7 +8,7 @@
     <META NAME="AUTHOR" CONTENT="Ivan Shirayev">
 
 
-    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
     <title>Кыргыздипсервис</title>
 </head>
 
@@ -104,7 +104,7 @@
                         <div class="logo-block">
                             <div class="logo">
                                 <a href="#" class="logo__link">
-                                    <img src="/assets/img/logo/logo.png" alt="logo" class="log__pic">
+                                    <img src="assets/img/logo/logo.png" alt="logo" class="log__pic">
                                 </a>
                             </div>
                             <a href="#" class="logo-text">
@@ -353,7 +353,7 @@
                                       <div class="catalog__desc">
                                           <a href="#" class="catalog__link">
                                              <div class="catalog__wrapp-pic price--position ">
-                                                   <img src="/assets/img/foto/home1.jpg" alt="catalog-pic"
+                                                   <img src="assets/img/foto/home1.jpg" alt="catalog-pic"
                                                    class="catalog__pic">
                                                    <div class="price">45000 сом</div>
                                              </div>                                        
@@ -365,7 +365,7 @@
                                       <div class="catalog__desc">
                                           <a href="#" class="catalog__link">
                                                 <div class="catalog__wrapp-pic price--position ">
-                                                      <img src="/assets/img/foto/home3.jpg" alt="catalog-pic"
+                                                      <img src="assets/img/foto/home3.jpg" alt="catalog-pic"
                                                       class="catalog__pic">
                                                       <div class="price">35000 сом</div>
                                                 </div> 
@@ -377,7 +377,7 @@
                                       <div class="catalog__desc">
                                           <a href="#" class="catalog__link">
                                                 <div class="catalog__wrapp-pic price--position ">
-                                                      <img src="/assets/img/foto/home4.jpg" alt="catalog-pic"
+                                                      <img src="assets/img/foto/home4.jpg" alt="catalog-pic"
                                                       class="catalog__pic">
                                                       <div class="price">55000 сом</div>
                                                 </div> 
@@ -389,7 +389,7 @@
                                       <div class="catalog__desc">
                                           <a href="arenda_nedvijenosti-inner.html" class="catalog__link">
                                                 <div class="catalog__wrapp-pic price--position ">
-                                                      <img src="/assets/img/foto/guest_house1.JPG" alt="catalog-pic"
+                                                      <img src="assets/img/foto/guest_house1.JPG" alt="catalog-pic"
                                                       class="catalog__pic">
                                                       <div class="price">25000 сом</div>
                                                 </div> 
@@ -414,7 +414,7 @@
                         <div class="logo-block logo-block--mobile">
                             <div class="logo">
                                 <a href="#" class="logo__link">
-                                    <img src="/assets/img/logo/logo.png" alt="logo" class="log__pic logo--footer">
+                                    <img src="assets/img/logo/logo.png" alt="logo" class="log__pic logo--footer">
                                 </a>
                             </div>
                             <a href="#" class="logo-text">
@@ -431,7 +431,7 @@
                         <div class="logo-block logo-block--mobile">
                             <div class="logo">
                                 <a href="#" class="logo__link">
-                                    <img src="/assets/img/logo/logo_midkr.png" alt="logo" class="log__pic logo--mid">
+                                    <img src="assets/img/logo/logo_midkr.png" alt="logo" class="log__pic logo--mid">
                                 </a>
                             </div>
                             <a href="#" class="logo-text">
