--- a/o-compyni.html
+++ b/o-compyni.html
@@ -8,7 +8,7 @@
     <META NAME="AUTHOR" CONTENT="Ivan Shirayev">
 
 
-    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
     <title>Кыргыздипсервис</title>
 </head>
 
@@ -104,7 +104,7 @@
                         <div class="logo-block">
                             <div class="logo">
                                 <a href="#" class="logo__link">
-                                    <img src="/assets/img/logo/logo.png" alt="logo" class="log__pic">
+                                    <img src="assets/img/logo/logo.png" alt="logo" class="log__pic">
                                 </a>
                             </div>
                             <a href="#" class="logo-text">
@@ -289,21 +289,21 @@
                            О компании
                         </h1>
                         <div class="main-content__text">
-                           <img src="/assets/img/logo/logo.png" alt="логотип кыргыздипсервиса">
+                           <img src="assets/img/logo/logo.png" alt="логотип кыргыздипсервиса">
                            <p>С начала установления <strong>  дипломатических отношений</strong> между независимым Кыргызстаном и мировым сообществом Государственное Предприятие "Кыргыздипсервис" является единым заказчиком и координатором всех видов услуг по обслуживанию аккредитованного в республике дипломатического корпуса и надёжно обеспечивает деятельность дипломатических миссий и представительств международных организаций. ГП «Кыргыздипсервис»  предоставляет качественное обслуживание дипломатических</p>                    
                         </div>    
-                        <h1 class="title title--margin ">
+                        <h2 class="title title--margin ">
                           Наши зарубежные партнеры    
-                        </h1>
+                        </h2>
                         <div class="partners-block">
                            <div class="partners-block__pic">
                               <a href="#" class="partners-block__link">
-                                 <img src="/assets/img/logo/logoUPDK.jpg" alt="logo партнеров" class="partners-block__img" >
+                                 <img src="assets/img/logo/logoUPDK.jpg" alt="logo партнеров" class="partners-block__img" >
                               </a>
                            </div>                          
                            <div class="partners-block__pic">
                               <a href="#" class="partners-block__link">
-                                 <img src="/assets/img/logo/uk.jpg" alt="logo партнеров" class="partners-block__img" >
+                                 <img src="assets/img/logo/uk.jpg" alt="logo партнеров" class="partners-block__img" >
                               </a>
                            </div>                          
                         </div>          
@@ -322,7 +322,7 @@ a
                         <div class="logo-block logo-block--mobile">
                             <div class="logo">
                                 <a href="#" class="logo__link">
-                                    <img src="/assets/img/logo/logo.png" alt="logo" class="log__pic logo--footer">
+                                    <img src="assets/img/logo/logo.png" alt="logo" class="log__pic logo--footer">
                                 </a>
                             </div>
                             <a href="#" class="logo-text">
@@ -339,7 +339,7 @@ a
                         <div class="logo-block logo-block--mobile">
                             <div class="logo">
                                 <a href="#" class="logo__link">
-                                    <img src="/assets/img/logo/logo_midkr.png" alt="logo" class="log__pic logo--mid">
+                                    <img src="assets/img/logo/logo_midkr.png" alt="logo" class="log__pic logo--mid">
                                 </a>
                             </div>
                             <a href="#" class="logo-text">
