--- a/service-page-inner.html
+++ b/service-page-inner.html
@@ -8,7 +8,7 @@
    <META NAME="AUTHOR" CONTENT="Ivan Shirayev">
 
 
-   <link rel="stylesheet" href="/assets/css/main.css">
+   <link rel="stylesheet" href="assets/css/main.css">
    <title>Кыргыздипсервис</title>
 </head>
 
@@ -104,7 +104,7 @@
                   <div class="logo-block">
                      <div class="logo">
                         <a href="#" class="logo__link">
-                           <img src="/assets/img/logo/logo.png" alt="logo" class="log__pic">
+                           <img src="assets/img/logo/logo.png" alt="logo" class="log__pic">
                         </a>
                      </div>
                      <a href="#" class="logo-text">
@@ -379,7 +379,7 @@
                   <div class="logo-block logo-block--mobile">
                      <div class="logo">
                         <a href="#" class="logo__link">
-                           <img src="/assets/img/logo/logo.png" alt="logo" class="log__pic logo--footer">
+                           <img src="assets/img/logo/logo.png" alt="logo" class="log__pic logo--footer">
                         </a>
                      </div>
                      <a href="#" class="logo-text">
@@ -396,7 +396,7 @@
                   <div class="logo-block logo-block--mobile">
                      <div class="logo">
                         <a href="#" class="logo__link">
-                           <img src="/assets/img/logo/logo_midkr.png" alt="logo" class="log__pic logo--mid">
+                           <img src="assets/img/logo/logo_midkr.png" alt="logo" class="log__pic logo--mid">
                         </a>
                      </div>
                      <a href="#" class="logo-text">
