--- a/service.html
+++ b/service.html
@@ -8,7 +8,7 @@
     <META NAME="AUTHOR" CONTENT="Ivan Shirayev">
 
 
-    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
     <title>Кыргыздипсервис</title>
 </head>
 
@@ -104,7 +104,7 @@
                         <div class="logo-block">
                             <div class="logo">
                                 <a href="#" class="logo__link">
-                                    <img src="/assets/img/logo/logo.png" alt="logo" class="log__pic">
+                                    <img src="assets/img/logo/logo.png" alt="logo" class="log__pic">
                                 </a>
                             </div>
                             <a href="#" class="logo-text">
@@ -345,13 +345,13 @@
                         </div>
                         <div class="slaider">
                               <div class="slaider__wrapper">
-                                  <img src="/assets/img/foto/sl.jpg" alt="slaider" class="slaider__pic">
+                                  <img src="assets/img/foto/sl.jpg" alt="slaider" class="slaider__pic">
                                   <span class="slaider__title">
                                       Туры по кыргызстану
                                   </span>
                               </div>
                               <div class="slaider__wrapper">
-                                  <img src="/assets/img/foto/ik.jpg" alt="slaider" class="slaider__pic">
+                                  <img src="assets/img/foto/ik.jpg" alt="slaider" class="slaider__pic">
                                   <span class="slaider__title">
                                       Дипломатический отдых
                                   </span>
@@ -368,7 +368,7 @@
                                     <li class="catalog__item">
                                         <div class="catalog__desc">
                                             <a href="service-item.html" class="catalog__link">
-                                                <img src="/assets/img/catalog/avto.jpg" alt="catalog-pic"
+                                                <img src="assets/img/catalog/avto.jpg" alt="catalog-pic"
                                                     class="catalog__pic">
                                                 <span class="catalog__text">Автотранспортные услуги</span>
                                             </a>
@@ -377,7 +377,7 @@
                                     <li class="catalog__item">
                                         <div class="catalog__desc">
                                             <a href="#" class="catalog__link">
-                                                <img src="/assets/img/catalog/home.jpg" alt="catalog-pic"
+                                                <img src="assets/img/catalog/home.jpg" alt="catalog-pic"
                                                     class="catalog__pic">
                                                 <span class="catalog__text">Риэлтовские услуги</span>
                                             </a>
@@ -386,7 +386,7 @@
                                     <li class="catalog__item">
                                         <div class="catalog__desc">
                                             <a href="#" class="catalog__link">
-                                                <img src="/assets/img/catalog/air.jpg" alt="catalog-pic"
+                                                <img src="assets/img/catalog/air.jpg" alt="catalog-pic"
                                                     class="catalog__pic">
                                                 <span class="catalog__text">Авиакасса</span>
                                             </a>
@@ -395,7 +395,7 @@
                                     <li class="catalog__item">
                                         <div class="catalog__desc">
                                             <a href="#" class="catalog__link">
-                                                <img src="/assets/img/catalog/passport.jpg" alt="catalog-pic"
+                                                <img src="assets/img/catalog/passport.jpg" alt="catalog-pic"
                                                     class="catalog__pic">
                                                 <span class="catalog__text">Консульские услуги</span>
                                             </a>
@@ -404,7 +404,7 @@
                                     <li class="catalog__item">
                                         <div class="catalog__desc">
                                             <a href="#" class="catalog__link">
-                                                <img src="/assets/img/catalog/turizm.jpg" alt="catalog-pic"
+                                                <img src="assets/img/catalog/turizm.jpg" alt="catalog-pic"
                                                     class="catalog__pic">
                                                 <span class="catalog__text">Туры по Кыргызстану</span>
                                             </a>
@@ -413,7 +413,7 @@
                                     <li class="catalog__item">
                                         <div class="catalog__desc">
                                             <a href="#" class="catalog__link">
-                                                <img src="/assets/img/catalog/gruzovik_perevozka_mashina.jpg"
+                                                <img src="assets/img/catalog/gruzovik_perevozka_mashina.jpg"
                                                     alt="catalog-pic" class="catalog__pic">
                                                 <span class="catalog__text">Грузоперевозки</span>
                                             </a>
@@ -422,7 +422,7 @@
                                     <li class="catalog__item">
                                         <div class="catalog__desc">
                                             <a href="#" class="catalog__link">
-                                                <img src="/assets/img/catalog/sport1.jpg"
+                                                <img src="assets/img/catalog/sport1.jpg"
                                                     alt="catalog-pic" class="catalog__pic">
                                                 <span class="catalog__text">Здоровье,отдых и спорт</span>
                                             </a>
@@ -431,7 +431,7 @@
                                     <li class="catalog__item">
                                         <div class="catalog__desc">
                                             <a href="#" class="catalog__link">
-                                                <img src="/assets/img/catalog/meating1.jpg"
+                                                <img src="assets/img/catalog/meating1.jpg"
                                                     alt="catalog-pic" class="catalog__pic">
                                                 <span class="catalog__text">Организация мероприятий</span>
                                             </a>
@@ -440,7 +440,7 @@
                                     <li class="catalog__item">
                                         <div class="catalog__desc">
                                             <a href="#" class="catalog__link">
-                                                <img src="/assets/img/catalog/urist1.jpg"
+                                                <img src="assets/img/catalog/urist1.jpg"
                                                     alt="catalog-pic" class="catalog__pic">
                                                 <span class="catalog__text">Юридические услуги</span>
                                             </a>
@@ -449,7 +449,7 @@
                                     <li class="catalog__item">
                                         <div class="catalog__desc">
                                             <a href="arenda_avto.html" class="catalog__link">
-                                                <img src="/assets/img/catalog/arenda_avto1.jpg"
+                                                <img src="assets/img/catalog/arenda_avto1.jpg"
                                                     alt="catalog-pic" class="catalog__pic">
                                                 <span class="catalog__text">Аренда автомобилей</span>
                                             </a>
@@ -458,7 +458,7 @@
                                     <li class="catalog__item">
                                         <div class="catalog__desc">
                                             <a href="arenda_nedvijenosti.html" class="catalog__link">
-                                                <img src="/assets/img/catalog/hom3.jpg"
+                                                <img src="assets/img/catalog/hom3.jpg"
                                                     alt="catalog-pic" class="catalog__pic">
                                                 <span class="catalog__text">Аренда недвижемости</span>
                                             </a>
@@ -483,7 +483,7 @@
                         <div class="logo-block logo-block--mobile">
                             <div class="logo">
                                 <a href="#" class="logo__link">
-                                    <img src="/assets/img/logo/logo.png" alt="logo" class="log__pic logo--footer">
+                                    <img src="assets/img/logo/logo.png" alt="logo" class="log__pic logo--footer">
                                 </a>
                             </div>
                             <a href="#" class="logo-text">
@@ -500,7 +500,7 @@
                         <div class="logo-block logo-block--mobile">
                             <div class="logo">
                                 <a href="#" class="logo__link">
-                                    <img src="/assets/img/logo/logo_midkr.png" alt="logo" class="log__pic logo--mid">
+                                    <img src="assets/img/logo/logo_midkr.png" alt="logo" class="log__pic logo--mid">
                                 </a>
                             </div>
                             <a href="#" class="logo-text">
